data/derived/fa15/progs/unify/prog3709.ml.out
Characters 60-85:
  let f a x = ((mulByDigit x l1)@(clone 0 (List.length a)))::a in
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list list
       but an expression was expected of type int list
       Type int list is not compatible with type int 
